@@ -1,3 +1,13 @@
+2005-04-26  Kevin B. Kenny  <kennykb@users.sourceforge.net>
+
+	* generic/tclObj.c (Tcl_GetDoubleFromObj): 
+	Restored silent overflow/underflow behaviour that the merge
+	of 2004-04-25 messed up.  Thanks to Don Porter for calling 
+	attention to this bug.
+	
+	* tests/expr.test (expr-29.*, expr-30.*): 
+	Added further tests of overflow/underflow on input conversions.
+	
 2005-04-25  Kevin B. Kenny  <kennykb@users.sourceforge.net>
 
 	[tcl-numerics-branch] Merged with HEAD.
